# officeOS

./: .gitignore  .gitleaks.toml  CLAUDE.md  MOBILE_COMPLETION_SUMMARY.md  MOBILE_RESPONSIVE_IMPLEMENTATION.md  PWA_COMPLETION_SUMMARY.md  PWA_IMPLEMENTATION.md  README.md  REPORTS_FIX_SUMMARY.md  TESTING_AUTO_INCOME.md  WEB_MODE_FIX_COMPLETE.md  test_security_issues.py
.claude/: skills
.github/workflows/: secrets-scan.yml
.obsidian/: workspace.json
.serena/: project.yml
Templates/: 1-on-1.md  decision-record.md  invoice.md  meeting-notes.md  project-brief.md  weekly-review.md
api/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/migrations/: 001-client-collaboration.sql  (+24 more)
app/: .gitignore  ecosystem.config.cjs  index.html  package-lock.json  package.json  serve.json  start-frontend.sh  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vite.config.web.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/claude/: error.rs  manager.rs  mod.rs  pty.rs  sessions.rs
docs/: ACCOUNTING_FEATURE.md  ACCOUNTING_WORKFLOWS.md  FEATURES.md  PRD-invoice-ocr.md  PRD-james-capture-processing.md  SMART_CALENDAR_FEATURE.md  phase-0-summary.md  phase-1-frontend-gaps.md  phase-1-status.md  prd-client-collaboration-dashboard.md
mcp-server/: README.md  package-lock.json  package.json
scripts/: github_sync.sh
systemd/: pa-backup.service  pa-backup.timer
(+2534 files in other folders)
